--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <% for (var i=0; i < posts.length; i++) { %>
-	<h2><%= posts[i].title %></h2>
-	<p><%= posts[i].body %></p><br/>
+	<h2><%= unescape(posts[i].title) %></h2>
+	<p>by <%= posts[i].user_name %></p>
+	<p><%= unescape(posts[i].body) %></p><br/>
 <% } %>
