--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,9 @@
 <% for (var i=0; i < posts.length; i++) { %>
 	<h2><%= unescape(posts[i].title) %></h2>
 	<p>by <%= posts[i].user_name %></p>
-	<p><%= unescape(posts[i].body) %></p><br/>
+	<% if(unescape(posts[i].body).indexOf("###") >= 0) { %>
+		<p><%- unescape(posts[i].body).split("###")[0] %></p><br/>
+	<% } else { %>
+		<p><%- unescape(posts[i].body) %></p><br/>
+	<% } %>
 <% } %>
