--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,5 +1,5 @@
 <% for (var i=0; i < posts.length; i++) { %>
-	<h2><%= unescape(posts[i].title) %></h2>
+	<h2><a href="/<%= posts[i].id %>"><%= unescape(posts[i].title) %></a></h2>
 	<p>by <%= posts[i].user_name %></p>
 	<% if(unescape(posts[i].body).indexOf("###") >= 0) { %>
 		<p><%- unescape(posts[i].body).split("###")[0] %></p><br/>
