--- a/views/admin/posts/edit.ejs
+++ b/views/admin/posts/edit.ejs
@@ -29,6 +29,7 @@
 </script>
 
 <form method="post" action="/admin/posts/update" id="createRoomForm">
+  <input type="hidden" name="_method" value="put" />
 	<h1>New Post</h1>
  	Title: <input type="text" name="title" size="62" value="<%= unescape(post.title) %>"/><br/><br/>
 	Body:<br/><br/>
