Implemented comments sending/subscribing/publising.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>Blogode</title>
+		<script src="/faye.js"></script>
+		<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
 	</head>
 	<body>
 		<h1>HEADER</h1><br/>
