--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,10 +1,55 @@
+<script>
+
+$(document).ready(function() {
+	$("#submit").click(function() {		
+			$.ajax({  
+			  type: "POST",  
+			  url: "/<%= post.id %>/comments/save",
+			  data: { author_name: $("input#author_name").val(), author_email: $("input#author_email").val(), comment: $("textarea#comment").val() },
+			  success: function() {
+			  }
+			});
+			return false;
+	});
+});
+
+var client = new Faye.Client('/faye', {
+	timeout: 120
+});
+
+client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
+	$("#comments_list").append("<div id=\"comment_" + response.id + "\">    " + 
+						   	   "	<h4>" + unescape(response.author_name) + "</h4>   " +
+						       "	<p>" + unescape(response.comment) + "</p>         " +
+						       "</div>");
+});
+
+</script>
+
 <h1><%= unescape(post.title) %></h1>
 <p>by <%= post.user_name %></p>
 <p><%- unescape(post.body) %></p>
 
+<br/>
 <h2>Comments</h2>
 
-<% for (var i=0; i < comments.length; i++) { %>
-	<h4><%= comments[i].author_name %></h4>
-	<p><%= comments[i].comment %></p>
-<% } %>
+<div id="comments_list">
+	<% for (var i=0; i < comments.length; i++) { %>
+		<div id="comment_<%= i %>">
+			<h4><%= unescape(comments[i].author_name) %></h4>
+			<p><%= unescape(comments[i].comment) %></p>
+		</div>
+	<% } %>
+</div>
+
+<br/>
+<h2>New comment</h2>
+
+<form>
+	<input type="text" id="author_name" placeholder="Your name" size="41"/><br/>
+	<input type="text" id="author_email" placeholder="Your e-mail" size="41"/><br/><br/>
+	
+	<textarea id="comment" cols="30" rows="5" placeholder="Your comment"></textarea><br/><br/>
+	
+	<input type="submit" id="submit"/>
+</form>
