--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,3 +1,5 @@
+<link rel="alternate" type="application/rss+xml" title="My Blog Name's RSS" href="/feed" />
+
 <% if(posts != undefined) { %>
 	<% for (var i=0; i < posts.length; i++) { %>
 		<h2><a href="/<%= posts[i].id %>"><%= unescape(posts[i].title) %></a></h2>
