Implemented layout management.

--- a/views/admin/panel.ejs
+++ b/views/admin/panel.ejs
@@ -1,3 +1,4 @@
 Admin panel.<br/><br/>
 
-<a href="/admin/posts">Manage posts</a>
+<a href="/admin/posts">Manage posts</a><br/><br/>
+<a href="/admin/template">Manage template</a>
