--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
 		<title>Blogode</title>
 		<script src="/faye.js"></script>
 		<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
+		<link href="/stylesheet.css" media="screen" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<h1>HEADER</h1>
