Implemented some local variables to theme designers.

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,4 +1,4 @@
-<link rel="alternate" type="application/rss+xml" title="My Blog Name's RSS" href="/feed" />
+<link rel="alternate" type="application/rss+xml" title="<%= blogName %>" href="/feed" />
 
 <% if(posts != undefined) { %>
 	<% for (var i=0; i < posts.length; i++) { %>
