--- a/public/templates/default_theme/layout.html
+++ b/public/templates/default_theme/layout.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Blogode</title>
+		<title><%= blogName %></title>
 		<script src="/faye.js"></script>
 		<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
 		<link href="/stylesheet.css" media="screen" rel="stylesheet" type="text/css" />
