Started implementing assync plugins.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<%= pluginFunction('test_plugin', 'getGoogleResponse', ['ASD']) %>
 		<title><%= blogName %></title>
 		<script src="/faye.js"></script>
 		<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
