Implemented plugins variable management. Finished implementing Twitter Search plugin.

--- a/views/admin/panel.ejs
+++ b/views/admin/panel.ejs
@@ -1,4 +1,5 @@
 Admin panel.<br/><br/>
 
 <a href="/admin/posts">Manage posts</a><br/><br/>
-<a href="/admin/template">Manage template</a>
+<a href="/admin/template">Manage template</a><br/><br/>
+<a href="/admin/plugins">Manage plugins</a><br/><br/>
