--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,6 +1,6 @@
 <link rel="alternate" type="application/rss+xml" title="My Blog Name's RSS" href="/feed" />
 
-<%= plugins.test_plugin %>
+<%- plugins.twitter_search %>
 
 <% if(posts != undefined) { %>
 	<% for (var i=0; i < posts.length; i++) { %>
