Fixed the memory leak when scaling multiple requests (caused by memory session storage)

--- a/views/admin/panel.ejs
+++ b/views/admin/panel.ejs
@@ -3,3 +3,4 @@ Admin panel.<br/><br/>
 <a href="/admin/posts">Manage posts</a><br/><br/>
 <a href="/admin/template">Manage template</a><br/><br/>
 <a href="/admin/plugins">Manage plugins</a><br/><br/>
+<a href="/admin/settings">Blog settings</a><br/><br/>
