Added the Twitter Search plugin to the right sidebar.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,6 +39,9 @@
 																</li>
 															</ul>
 														</li>
+														<li class="widget">
+															<%- plugins.twitter_search %>
+														</li>
 														<li class="widget"><h2>Categories</h2>
 															<ul id="categories">
 																<li class="cat-item cat-item-18"><a href="http://wpthemes.blogohblog.net/category/featured/" title="View all posts filed under Featured">Featured</a> (1)
