--- a/public/templates/initial_theme/posts/show.html
+++ b/public/templates/initial_theme/posts/show.html
@@ -1,3 +1,4 @@
+<script src="/faye.js"></script>
 <script>
 
 $(document).ready(function() {
@@ -22,9 +23,8 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 	// 					   	   "	<h4>" + unescape(response.author_name) + "</h4>   " +
 	// 					       "	<p>" + unescape(response.comment) + "</p>         " +
 	// 					       "</div>");
-	alert("received")
 	
-	$("comments").append("<li>" + 
+	$("#comments").append("<li>" + 
 						 "	<h3>" + unescape(response.author_name) + "</h3>" + 
 						 "  <small>" + unescape(response.created_at) + "</small>" + 
 						 "	<p>" + unescape(response.comment) + "</p>" + 
