--- a/views/admin/posts/index.ejs
+++ b/views/admin/posts/index.ejs
@@ -2,7 +2,7 @@
 
 <% if(posts != undefined) { %>
 	<% for (var i=0; i < posts.length; i++) { %>
-		<b><%= unescape(posts[i].title) %></b> (by <%= posts[i].user_name %>) - <a href="/admin/posts/<%= posts[i].id %>">Edit</a> - <a href="/admin/posts/destroy/<%= posts[i].id %>">Delete</a><br/><br/>
+		<b><%= unescape(posts[i].title) %></b> (by <%= unescape(posts[i].user_name) %>) - <a href="/admin/posts/<%= posts[i].id %>">Edit</a> - <a href="/admin/posts/destroy/<%= posts[i].id %>">Delete</a><br/><br/>
 	<% } %>
 <% } %>
 
