Fixed issue when showing comment's date.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
 														<li class="widget">
 															<%- plugins.twitter_search %>
 														</li>
-														<li class="widget"><h2>Categories</h2>
+														<!-- <li class="widget"><h2>Categories</h2>
 															<ul id="categories">
 																<li class="cat-item cat-item-18"><a href="http://wpthemes.blogohblog.net/category/featured/" title="View all posts filed under Featured">Featured</a> (1)
 																</li>
@@ -50,7 +50,7 @@
 																<li class="cat-item cat-item-4"><a href="http://wpthemes.blogohblog.net/category/testing-theme/" title="View all posts filed under Testing Theme">Testing Theme</a> (5)
 																</li>
 															</ul>
-														</li>
+														</li> -->
 													</ul>
 												</div><!-- End Sidebar -->
 											</div>
