--- a/public/templates/initial_theme/posts/show.html
+++ b/public/templates/initial_theme/posts/show.html
@@ -1,6 +1,20 @@
 <script src="/faye.js"></script>
 <script>
 
+function calcTime(offset, time) {
+	nd = new Date(time + (3600000*offset));
+
+	return nd.toLocaleString();
+}
+
+<% 
+function calcTime(offset, time) {
+	nd = new Date(time + (3600000*offset));
+
+	return nd.toLocaleString();
+}
+%>
+
 $(document).ready(function() {
 	$("#submit").click(function() {		
 			$.ajax({  
@@ -26,7 +40,7 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 	
 	$("#comments").append("<li>" + 
 						 "	<h3>" + unescape(response.author_name) + "</h3>" + 
-						 "  <small>" + unescape(response.created_at) + "</small>" + 
+						 "  <small>" + calcTime(-3, comments[i].created_at) + "</small>" + 
 						 "	<p>" + unescape(response.comment) + "</p>" + 
 						 "</li>")
 
@@ -37,7 +51,7 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 <div class="post">
 	<h2><%= unescape(post.title) %></h2>
 	<div class="post-info">
-		by <%= post.user_name %><br/><br/>
+		by <%= unescape(post.user_name) %><br/><br/>
 		<p><%= unescape(post.created_at) %></p>
 	</div>
 	<div class="post-entry">
@@ -51,7 +65,8 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 			<% for (var i=0; i < comments.length; i++) { %>
 				<li>
 					<h3><%= unescape(comments[i].author_name) %></h3>
-					<small><%= unescape(comments[i].created_at) %></small>
+					<!-- calcTime(-3, comments[i].created_at) -->
+					<small><%= calcTime(-3, comments[i].created_at) %></small>
 					<p><%= unescape(comments[i].comment) %></p>
 				</li>
 				<br/>
