--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -26,7 +26,7 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 	
 	$("#comments").append("<li>" + 
 						 "	<h3>" + unescape(response.author_name) + "</h3>" + 
-						 "  <small>" + unescape(response.created_at) + "</small>" + 
+						 "  <small>" + response.created_at + "</small>" + 
 						 "	<p>" + unescape(response.comment) + "</p>" + 
 						 "</li>")
 
@@ -37,7 +37,7 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 <div class="post">
 	<h2><%= unescape(post.title) %></h2>
 	<div class="post-info">
-		by <%= post.user_name %><br/><br/>
+		by <%= unescape(post.user_name) %><br/><br/>
 		<p><%= unescape(post.created_at) %></p>
 	</div>
 	<div class="post-entry">
@@ -51,7 +51,7 @@ client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
 			<% for (var i=0; i < comments.length; i++) { %>
 				<li>
 					<h3><%= unescape(comments[i].author_name) %></h3>
-					<small><%= unescape(comments[i].created_at) %></small>
+					<small><%= comments[i].created_at %></small>
 					<p><%= unescape(comments[i].comment) %></p>
 				</li>
 				<br/>
