--- a/views/admin/users/new.ejs
+++ b/views/admin/users/new.ejs
@@ -8,6 +8,7 @@
 	Password: <input type="password" name="password" size="40"/><br/><br/>
 	
 	<input type="checkbox" name="manage_posts" checked/>Manage posts<br/>
+	<input type="checkbox" name="manage_comments"/>Manage comments<br/>
 	<input type="checkbox" name="manage_templates"/>Manage templates<br/>
 	<input type="checkbox" name="manage_plugins"/>Manage plugins<br/>
 	<input type="checkbox" name="manage_settings"/>Manage blog settings<br/>
