--- a/views/admin/users/new.ejs
+++ b/views/admin/users/new.ejs
@@ -9,6 +9,7 @@
 	
 	<input type="checkbox" name="manage_posts" checked/>Manage posts<br/>
 	<input type="checkbox" name="manage_comments"/>Manage comments<br/>
+	<input type="checkbox" name="manage_pages"/>Manage pages<br/>
 	<input type="checkbox" name="manage_templates"/>Manage templates<br/>
 	<input type="checkbox" name="manage_plugins"/>Manage plugins<br/>
 	<input type="checkbox" name="manage_settings"/>Manage blog settings<br/>
