Page's link is now related to the page's name (and not the ID anymore).

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
 														<li class="widget">
 															<h2>Pages</h2>
 															<% for(var i=0; i < pages.length; i++) { %>
-																<a href="/pages/<%= pages[i].id %>"><%= unescape(pages[i].title) %></a><br/>
+																<a href="/pages/<%= pages[i].link_name %>"><%= unescape(pages[i].title) %></a><br/>
 															<% } %>
 														</li>
 														<br/>
