Improved themes loading.

--- a/views/admin/template/index.ejs
+++ b/views/admin/template/index.ejs
@@ -48,6 +48,8 @@ File to edit:
   <option value="layout">Content template</option>
   <option value="index">Index</option>
   <option value="post_show">Post reading</option>
+  <option value="page_show">Page reading</option>
+  <option value="search_results">Search results</option>
   <option value="stylesheet">Stylesheet</option>
 </select>
 
