--- a/public/templates/my_other_theme/posts/show.html
+++ b/public/templates/my_other_theme/posts/show.html
@@ -1,3 +1,115 @@
+<% 
+
+// version 0.11 by Daniel Rench
+// More information: http://dren.ch/strftime/
+// This is public domain software
+
+Number.prototype.pad =
+	function (n,p) {
+		var s = '' + this;
+		p = p || '0';
+		while (s.length < n) s = p + s;
+		return s;
+	};
+
+Date.prototype.months = [
+		'January', 'February', 'March', 'April', 'May', 'June', 'July',
+		'August', 'September', 'October', 'November', 'December'
+	];
+Date.prototype.weekdays = [
+		'Sunday', 'Monday', 'Tuesday', 'Wednesday',
+		'Thursday', 'Friday', 'Saturday'
+	];
+Date.prototype.dpm = [ 31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31 ];
+
+Date.prototype.strftime_f = {
+		A: function (d) { return d.weekdays[d.getDay()] },
+		a: function (d) { return d.weekdays[d.getDay()].substring(0,3) },
+		B: function (d) { return d.months[d.getMonth()] },
+		b: function (d) { return d.months[d.getMonth()].substring(0,3) },
+		C: function (d) { return Math.floor(d.getFullYear()/100); },
+		c: function (d) { return d.toString() },
+		D: function (d) {
+				return d.strftime_f.m(d) + '/' +
+					d.strftime_f.d(d) + '/' + d.strftime_f.y(d);
+			},
+		d: function (d) { return d.getDate().pad(2,'0') },
+		e: function (d) { return d.getDate().pad(2,' ') },
+		F: function (d) {
+				return d.strftime_f.Y(d) + '-' + d.strftime_f.m(d) + '-' +
+					d.strftime_f.d(d);
+			},
+		H: function (d) { return d.getHours().pad(2,'0') },
+		I: function (d) { return ((d.getHours() % 12 || 12).pad(2)) },
+		j: function (d) {
+				var t = d.getDate();
+				var m = d.getMonth() - 1;
+				if (m > 1) {
+					var y = d.getYear();
+					if (((y % 100) == 0) && ((y % 400) == 0)) ++t;
+					else if ((y % 4) == 0) ++t;
+				}
+				while (m > -1) t += d.dpm[m--];
+				return t.pad(3,'0');
+			},
+		k: function (d) { return d.getHours().pad(2,' ') },
+		l: function (d) { return ((d.getHours() % 12 || 12).pad(2,' ')) },
+		M: function (d) { return d.getMinutes().pad(2,'0') },
+		m: function (d) { return (d.getMonth()+1).pad(2,'0') },
+		n: function (d) { return "\n" },
+		p: function (d) { return (d.getHours() > 11) ? 'PM' : 'AM' },
+		R: function (d) { return d.strftime_f.H(d) + ':' + d.strftime_f.M(d) },
+		r: function (d) {
+				return d.strftime_f.I(d) + ':' + d.strftime_f.M(d) + ':' +
+					d.strftime_f.S(d) + ' ' + d.strftime_f.p(d);
+			},
+		S: function (d) { return d.getSeconds().pad(2,'0') },
+		s: function (d) { return Math.floor(d.getTime()/1000) },
+		T: function (d) {
+				return d.strftime_f.H(d) + ':' + d.strftime_f.M(d) + ':' +
+					d.strftime_f.S(d);
+			},
+		t: function (d) { return "\t" },
+/*		U: function (d) { return false }, */
+		u: function (d) { return(d.getDay() || 7) },
+/*		V: function (d) { return false }, */
+		v: function (d) {
+				return d.strftime_f.e(d) + '-' + d.strftime_f.b(d) + '-' +
+					d.strftime_f.Y(d);
+			},
+/*		W: function (d) { return false }, */
+		w: function (d) { return d.getDay() },
+		X: function (d) { return d.toTimeString() }, // wrong?
+		x: function (d) { return d.toDateString() }, // wrong?
+		Y: function (d) { return d.getFullYear() },
+		y: function (d) { return (d.getYear() % 100).pad(2) },
+//		Z: function (d) { return d.toString().match(/\((.+)\)$/)[1]; },
+//		z: function (d) { return d.getTimezoneOffset() }, // wrong
+//		z: function (d) { return d.toString().match(/\sGMT([+-]\d+)/)[1]; },
+		'%': function (d) { return '%' }
+	};
+
+Date.prototype.strftime_f['+'] = Date.prototype.strftime_f.c;
+Date.prototype.strftime_f.h = Date.prototype.strftime_f.b;
+
+Date.prototype.strftime =
+	function (fmt) {
+		var r = '';
+		var n = 0;
+		while(n < fmt.length) {
+			var c = fmt.substring(n, n+1);
+			if (c == '%') {
+				c = fmt.substring(++n, n+1);
+				r += (this.strftime_f[c]) ? this.strftime_f[c](this) : c;
+			} else r += c;
+			++n;
+		}
+		return r;
+	};
+
+%>
+
+<script src="/faye.js"></script>
 <script>
 
 $(document).ready(function() {
@@ -18,38 +130,67 @@ var client = new Faye.Client('/faye', {
 });
 
 client.subscribe('/<%= post.id %>/comments/bayeux', function(response) {
-	$("#comments_list").append("<div id=\"comment_" + response.id + "\">    " + 
-						   	   "	<h4>" + unescape(response.author_name) + "</h4>   " +
-						       "	<p>" + unescape(response.comment) + "</p>         " +
-						       "</div>");
+	// $("#comments_list").append("<div id=\"comment_" + response.id + "\">    " + 
+	// 					   	   "	<h4>" + unescape(response.author_name) + "</h4>   " +
+	// 					       "	<p>" + unescape(response.comment) + "</p>         " +
+	// 					       "</div>");
+	
+	$("#comments").append("<li>" + 
+						 "	<h3>" + unescape(response.author_name) + "</h3>" + 
+						 "  <small>" + response.created_at + "</small>" + 
+						 "	<p>" + unescape(response.comment) + "</p>" + 
+						 "</li>")
+
 });
 
 </script>
 
-<h1><%= unescape(post.title) %></h1>
-<p>by <%= post.user_name %></p>
-<p><%- unescape(post.body) %></p>
-
-<br/>
-<h2>Comments</h2>
-
-<div id="comments_list">
-	<% for (var i=0; i < comments.length; i++) { %>
-		<div id="comment_<%= i %>">
-			<h4><%= unescape(comments[i].author_name) %></h4>
-			<p><%= unescape(comments[i].comment) %></p>
-		</div>
-	<% } %>
+<div class="post">
+	<h2><%= unescape(post.title) %></h2>
+	<div class="post-info">
+		by <%= unescape(post.user_name) %><br/><br/>
+		<p><%= unescape(post.created_at.strftime("%I:%M %p, %m/%d/%Y")) %></p>
+	</div>
+	<div class="post-entry">
+		<p><%- unescape(post.body) %></p>
+	</div>
 </div>
-
-<br/>
-<h2>New comment</h2>
-
-<form>
-	<input type="text" id="author_name" placeholder="Your name" size="41"/><br/>
-	<input type="text" id="author_email" placeholder="Your e-mail" size="41"/><br/><br/>
-	
-	<textarea id="comment" cols="30" rows="5" placeholder="Your comment"></textarea><br/><br/>
-	
-	<input type="submit" id="submit"/>
-</form>
+	<!-- You can start editing here. -->
+	<div id="comments">
+		<h2>Comments</h2>
+		<ol class="commentlist">
+			<% for (var i=0; i < comments.length; i++) { %>
+				<% if(comments[i] != undefined) { %>
+				<li>
+					<h3><%= unescape(comments[i].author_name) %></h3>
+					<small><%= comments[i].created_at %></small>
+					<p><%- unescape(comments[i].comment) %></p>
+				</li>
+				<br/>
+				<% } %>
+			<% } %>
+		</ol>
+	</div>
+	<hr/>
+	<div id="respond">
+		<h2>Leave a Reply</h2>
+		<form>
+			<p class="commentinput push">
+				<label for="author">Name (required)</label>
+				<input type="text" name="author" id="author_name" value="" size="22" tabindex="1"/>
+			</p>
+			<p class="commentinput push">
+				<label for="email">Mail (not published) (required)</label>
+				<input type="text" name="email" id="author_email" value="" size="22" tabindex="2"/>
+			</p>
+			<p class="commenttext">
+				<label for="comment">Your Comment</label>
+				<textarea name="comment" id="comment" rows="10" cols="10" tabindex="4"></textarea>
+			</p>
+			<p>
+				<button name="submit" type="submit" id="submit" tabindex="5">Submit Comment</button>
+				<button name="reset" type="reset" id="reset" tabindex="6">Reset Form</button>
+			</p>
+		</form>
+	</div>
+	<hr/>
