Added more stuff to the README.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://gmpg.org/xfn/11">
 
-<title>Chapters | Just another WooThemes demo site</title>
+<title><%= blogName %></title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="robots" content="index, follow" />
 
 <link rel="stylesheet" type="text/css" href="/stylesheet.css" media="screen" />
 <!-- <link rel="stylesheet" type="text/css" href="http://demo.woothemes.com/chapters/wp-content/themes/chapters/style.css" media="screen" /> -->
 <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://demo.woothemes.com/chapters/feed/" />
-<link rel="pingback" href="http://demo.woothemes.com/chapters/xmlrpc.php" />
+<!-- <link rel="pingback" href="http://demo.woothemes.com/chapters/xmlrpc.php" />
       
 <script type='text/javascript' src='http://demo.woothemes.com/chapters/wp-includes/js/jquery/jquery.js?ver=1.4.2'></script>
 <script type='text/javascript' src='http://demo.woothemes.com/chapters/wp-content/themes/chapters/includes/js/jcarousel.js?ver=3.0.4'></script>
@@ -20,22 +20,7 @@
 <link rel='index' title='Chapters' href='http://demo.woothemes.com/chapters/' />
 <meta name="generator" content="WordPress 3.0.4" />
 <link rel="stylesheet" href="http://demo.woothemes.com/chapters/wp-content/plugins/ajax-calendar/calendar.css" type="text/css" media="screen" title="no title" charset="utf-8"/>
-<script type="text/javascript" src="http://demo.woothemes.com/chapters/wp-content/plugins/ajax-calendar/js/microajax.js"></script>
-<script type="text/javascript" charset="utf-8">
-/*<![CDATA[ */
-	function calendar (year,month,full,base)
-	{
-		microAjax ('http://demo.woothemes.com/chapters/wp-content/plugins/ajax-calendar/ajax.php?full=' + full + '&month=' + month + '&year=' + year + '&base=' + base, function(response) { document.getElementById ('giraffe_calendar').innerHTML = response});
-		return false;
-	}
-/*]]>*/
-</script>
-<meta name="generator" content="Chapters 1.0.4" />
-<meta name="generator" content="WooFramework 3.2.09" />
-	<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
-<!-- Woo Custom Styling -->
-<style type="text/css">
-</style>
+<script type="text/javascript" src="http://demo.woothemes.com/chapters/wp-content/plugins/ajax-calendar/js/microajax.js"></script> -->
 </head>
 
 <body class="home blog safari">
@@ -131,7 +116,7 @@
     }
 //-->!]]>
 </script>
-<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/woothemes.json?callback=twitterCallback2&amp;count=3"></script>
+<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/pedroh96.json?callback=twitterCallback2&amp;count=3"></script>
 	 
         </div>        
    		
