--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -408,7 +408,7 @@ img.aligncenter  { margin-left:auto; margin-right:auto; display:block; }
 /*-------------------------------------------------------------------------------------------*/
 
 /* 5.1 Comments */
-#comments-wrap  { display: none; width: 460px; margin: 0 0 0 20px; }
+#comments-wrap  { width: 460px; margin: 0 0 0 20px; }
 #comments-wrap.from-home  { display: block; }
 
 #comments {position:relative;margin: 30px 0 0;padding: 0; }
@@ -467,48 +467,6 @@ h3#pings  { margin: 25px 0 10px 0; }
 /* 6.1 Buttons */
 a.button, 
 a.comment-reply-link, 
-#commentform #submit {
-	display: inline-block;
-	margin: 5px;
-	padding: 3px 13px;
-	border: 1px solid #4081af;
-	border-bottom-color: #20559a;
-	color: white !important;
-	text-align: center;
-	text-shadow: 0 -1px 0 hsla(0,0%,0%,.3);
-	text-decoration: none;
-	
-	/*Border radius*/
-	-webkit-border-radius: 15px;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-	
-	/*Background*/
-	background: #237fd7; /*Fallback*/
-	background: -webkit-gradient(
-					linear,
-					left top,
-					left bottom,
-					color-stop(.2, #52a8e8),
-					color-stop(1, #2e76cf)
-				);
-	background: -moz-linear-gradient(
-					center top,
-					#52a8e8 20%,
-					#2e76cf 100%
-				);
-	
-	/*Box shadow*/
-	-webkit-box-shadow: inset 0 1px 0 hsla(0,100%,100%,.3) /*Top*/, 
-						inset 0 0 2px hsla(0,100%,100%,.3) /*Shine*/, 
-						0 1px 2px hsla(0, 0%, 0%, .29) /*Shadow*/;
-	-moz-box-shadow: inset 0 1px 0 hsla(0,100%,100%,.3) /*Top*/, 
-					inset 0 0 2px hsla(0,100%,100%,.3) /*Shine*/, 
-					0 1px 2px hsla(0, 0%, 0%, .29) /*Shadow*/;
-	box-shadow: inset 0 1px 0 hsla(0,100%,100%,.3) /*Top*/, 
-				inset 0 0 2px hsla(0,100%,100%,.3) /*Shine*/, 
-				0 1px 2px hsla(0, 0%, 0%, .29) /*Shadow*/;
-}
 
 a.button.large { padding:6px 16px;}
 a.button.small, a.comment-reply-link { padding:0px 10px;}
