--- a/views/admin/plugins/index.ejs
+++ b/views/admin/plugins/index.ejs
@@ -7,9 +7,15 @@
 	<form method="post" action="/admin/plugins/set_config_variables">
 		<input type="hidden" name="call_name" value="<%= plugins[p].pluginInfos['call_name'] %>">
 		<% for(var i=0; i < plugins[p].configVariables.length; i++) { %>
-			<b><%= plugins[p].configVariables[i]['name'] %></b> (<%= plugins[p].configVariables[i]['description'] %>): <input type="<%= plugins[p].configVariables[i]['field_type'] %>" name="<%= plugins[p].configVariables[i]['access_name'] %>" value="<%= pluginValues[plugins[p].pluginInfos['call_name']][plugins[p].configVariables[i]['access_name']] %>"/><br/>
+			<b><%= plugins[p].configVariables[i]['name'] %></b> (<%= plugins[p].configVariables[i]['description'] %>): <input type="<%= plugins[p].configVariables[i]['field_type'] %>" name="<%= plugins[p].configVariables[i]['access_name'] %>" 
+			
+			<% if(pluginValues[plugins[p].pluginInfos['call_name']] != undefined) { %>
+				value="<%= pluginValues[plugins[p].pluginInfos['call_name']][plugins[p].configVariables[i]['access_name']] %>"
+			<% } %>
+			
+			/><br/>
 		<% } %>
 		<br/>
 	 	<input type="submit" value="Save '<%= plugins[p].pluginInfos["name"] %>'" />
-	</form><br/><br/>
+	</form><br/>
 <% } %>
