--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
 
 <link rel="stylesheet" type="text/css" href="/stylesheet.css" media="screen" />
 <!-- <link rel="stylesheet" type="text/css" href="http://demo.woothemes.com/chapters/wp-content/themes/chapters/style.css" media="screen" /> -->
+<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
 <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://demo.woothemes.com/chapters/feed/" />
 <!-- <link rel="pingback" href="http://demo.woothemes.com/chapters/xmlrpc.php" />
       
@@ -31,7 +32,7 @@
 	
 	    	<div id="logo">
 	    	   
-	    		    			    <a href="http://demo.woothemes.com/chapters" title="Just another WooThemes demo site">
+	    		    			    <a href="<%= blogAddress %>" title="<%= blogName %>">
     			        <img src="http://demo.woothemes.com/chapters/wp-content/themes/chapters/images/logo.png" alt="Chapters" />
     			    </a>
     			 
@@ -40,11 +41,6 @@
     			    			    <span class="site-description">Just another WooThemes demo site</span>
 	    	  	
 	    	</div><!-- /#logo -->
-	    	
-	    		    	<ul id="prevnext">
-	    		    		<li id="prev"><a href="http://demo.woothemes.com/chapters/2010/11/16/the-post-title/" rel="prev">Previous <small>page</small></a></li>
-				<li id="next"><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/" rel="next">Next <small>page</small></a></li>
-			</ul>
 					
 		</div><!-- /.header-inside -->
 	    
@@ -56,163 +52,42 @@
 	<div id="wrapper-inner">
 	
 		<div id="sidebar-left">
-			<div id="pages-2" class="widget widget_pages"><h3>Pages</h3>		<ul>
-			<li class="page_item page-item-24"><a href="http://demo.woothemes.com/chapters/about-2/" title="About">About</a></li>
-<li class="page_item page-item-151"><a href="http://demo.woothemes.com/chapters/archives/" title="Archives">Archives</a></li>
-<li class="page_item page-item-144"><a href="http://demo.woothemes.com/chapters/contact/" title="Contact">Contact</a></li>
-<li class="page_item page-item-34"><a href="http://demo.woothemes.com/chapters/about-excerpt/" title="What is this?">What is this?</a></li>
+			<div id="pages-2" class="widget widget_pages"><h3>Páginas</h3>		<ul>
+				<% for(var i=0; i < pages.length; i++) { %>
+					<li class="page_item"><a href="/pages/<%= pages[i].link_name %>" title="<%= unescape(pages[i].title) %>"><%= unescape(pages[i].title) %></a></li>
+				<% } %>
 		</ul>
 		</div>		<div id="woo_search-3" class="widget widget_woo_search">                <div class="search_main">
-    <form method="get" class="searchform" action="http://demo.woothemes.com/chapters" >
-        <input type="text" class="field s" name="s" value="Search..." onfocus="if (this.value == 'Search...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search...';}" />
-        <input type="image" src="http://demo.woothemes.com/chapters/wp-content/themes/chapters/images/ico-search.png" class="submit" name="submit" value="Go" />
+    <form method="get" class="searchform" action="/search" >
+        <input type="text" class="field s" name="keywords" value="Pesquisar..." onfocus="if (this.value == 'Pesquisar...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Pesquisar...';}" />
     </form>    
     <div class="fix"></div>
 </div>
 		</div>   
-   		<div id="woo_twitter-3" class="widget widget_woo_twitter">        <h3>Twitter</h3>        
-        <div class="back"><ul id="twitter_update_list_woo_twitter-3"><li></li></ul>
-        <p>Follow <a href="http://twitter.com/woothemes"><strong>@woothemes</strong></a> on Twitter</p></div><div class="clear"></div>
-        <script type="text/javascript">
-<!--//--><![CDATA[//><!--
-
-    function twitterCallback2(twitters) {
-      var statusHTML = [];
-      for (var i=0; i<twitters.length; i++){
-        var username = twitters[i].user.screen_name;
-        var status = twitters[i].text.replace(/((https?|s?ftp|ssh)\:\/\/[^"\s\<\>]*[^.,;'">\:\s\<\>\)\]\!])/g, function(url) {
-          return '<a href="'+url+'">'+url+'</a>';
-        }).replace(/\B@([_a-z0-9]+)/ig, function(reply) {
-          return  reply.charAt(0)+'<a href="http://twitter.com/'+reply.substring(1)+'">'+reply.substring(1)+'</a>';
-        });
-        statusHTML.push('<li><span class="content">'+status+'</span> <a style="font-size:85%" class="time" href="http://twitter.com/'+username+'/statuses/'+twitters[i].id+'">'+relative_time(twitters[i].created_at)+'</a></li>');
-      }
-      document.getElementById('twitter_update_list_woo_twitter-3').innerHTML = statusHTML.join('');
-    }
-    
-    function relative_time(time_value) {
-      var values = time_value.split(" ");
-      time_value = values[1] + " " + values[2] + ", " + values[5] + " " + values[3];
-      var parsed_date = Date.parse(time_value);
-      var relative_to = (arguments.length > 1) ? arguments[1] : new Date();
-      var delta = parseInt((relative_to.getTime() - parsed_date) / 1000);
-      delta = delta + (relative_to.getTimezoneOffset() * 60);
-    
-      if (delta < 60) {
-        return 'less than a minute ago';
-      } else if(delta < 120) {
-        return 'about a minute ago';
-      } else if(delta < (60*60)) {
-        return (parseInt(delta / 60)).toString() + ' minutes ago';
-      } else if(delta < (120*60)) {
-        return 'about an hour ago';
-      } else if(delta < (24*60*60)) {
-        return 'about ' + (parseInt(delta / 3600)).toString() + ' hours ago';
-      } else if(delta < (48*60*60)) {
-        return '1 day ago';
-      } else {
-        return (parseInt(delta / 86400)).toString() + ' days ago';
-      }
-    }
-//-->!]]>
-</script>
-<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/pedroh96.json?callback=twitterCallback2&amp;count=3"></script>
-	 
+   		<div class="widget">
+	 		<%- plugins.twitter_search %>
         </div>        
    		
 		</div>		
 		<div id="main">
 
-			<div class="content-wrapper">
-				<div class="content">
-				
-				            			        			
-        							
-					<div class="content-inner post">
-						
-						<!-- <p class="chapter-info"><span class="chapter-number">Chapter </span> <span class="chapter-caption">&ldquo;A caption can go here&rdquo;</span></p> -->
-						
-						<h2 class="title"><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/">An example of a post</a></h2>
-						
-						<p class="post-meta">
-    <span class="post-author"><span class="small">by</span> <a href="http://demo.woothemes.com/chapters/author/admin/" title="Posts by WooThemes">WooThemes</a></span>
-    <span class="post-date"><span class="small">on</span> November 16, 2010</span>
-    <span class="post-category"><span class="small">in</span> <a href="http://demo.woothemes.com/chapters/category/uncategorized/" title="View all posts in Uncategorized" rel="category tag">Uncategorized</a></span>
-    </p>
-						
-						 
-						
-						<div class="entry">
-							<p>Maecenas leo odio, hendrerit in auctor ac, ultrices eu urna.  Curabitur sed massa dui, id scelerisque elit. Praesent vestibulum justo  eget magna fermentum molestie. Vestibulum dictum euismod sodales.  Vivamus in ligula vitae leo pellentesque dapibus. Nunc in nisi dapibus  nibh mattis euismod quis ac tellus. Quisque non eros mi. Curabitur ac  odio augue.</p>
-<p>Suspendisse consequat felis nec diam tincidunt bibendum. Vestibulum  mauris velit, vulputate vel mollis in, blandit quis metus. Integer est  purus, sodales et elementum non, tristique ac risus. In accumsan congue  tincidunt. Vestibulum nec mauris at est blandit adipiscing. Etiam in  orci vel mauris euismod tempor sed vel lorem. Vivamus blandit nisi ut  quam porttitor in rutrum urna hendrerit. Morbi id tortor vel mi  tincidunt blandit nec quis magna. Sed enim justo, aliquet nec blandit  sed, molestie eu magna. Mauris id vehicula arcu. Mauris eu enim dui, sit  amet convallis lectus. Praesent id velit turpis, ac tempus eros. Etiam  ac enim nisl, at tempor ipsum. Nunc turpis leo, commodo eu sodales sit  amet, condimentum sed risus. Vestibulum ultricies neque at neque tempor  dapibus. In et lectus pharetra ante fermentum posuere nec non ligula.  Aenean lacus nunc, vulputate vehicula molestie eu, auctor ut dolor.</p>
-						</div>
-						
-													
-																					<p class="comments"><span><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/?h=t#comments-wrap">1 Comments</a> &darr;</span></p>
-							
-														
-												
-					</div>
-					
-					<!-- /.post -->
-					
-										
-				</div>
-			</div>
-			
-			<br/><br/><br/><br/>
-			
-			<div class="content-wrapper">
-				<div class="content">
-				
-				            			        			
-        							
-					<div class="content-inner post">
-						
-						<!-- <p class="chapter-info"><span class="chapter-number">Chapter </span> <span class="chapter-caption">&ldquo;A caption can go here&rdquo;</span></p> -->
-						
-						<h2 class="title"><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/">An example of a post</a></h2>
-						
-						<p class="post-meta">
-    <span class="post-author"><span class="small">by</span> <a href="http://demo.woothemes.com/chapters/author/admin/" title="Posts by WooThemes">WooThemes</a></span>
-    <span class="post-date"><span class="small">on</span> November 16, 2010</span>
-    <span class="post-category"><span class="small">in</span> <a href="http://demo.woothemes.com/chapters/category/uncategorized/" title="View all posts in Uncategorized" rel="category tag">Uncategorized</a></span>
-    </p>
-						
-						 
-						
-						<div class="entry">
-							<p>Maecenas leo odio, hendrerit in auctor ac, ultrices eu urna.  Curabitur sed massa dui, id scelerisque elit. Praesent vestibulum justo  eget magna fermentum molestie. Vestibulum dictum euismod sodales.  Vivamus in ligula vitae leo pellentesque dapibus. Nunc in nisi dapibus  nibh mattis euismod quis ac tellus. Quisque non eros mi. Curabitur ac  odio augue.</p>
-<p>Suspendisse consequat felis nec diam tincidunt bibendum. Vestibulum  mauris velit, vulputate vel mollis in, blandit quis metus. Integer est  purus, sodales et elementum non, tristique ac risus. In accumsan congue  tincidunt. Vestibulum nec mauris at est blandit adipiscing. Etiam in  orci vel mauris euismod tempor sed vel lorem. Vivamus blandit nisi ut  quam porttitor in rutrum urna hendrerit. Morbi id tortor vel mi  tincidunt blandit nec quis magna. Sed enim justo, aliquet nec blandit  sed, molestie eu magna. Mauris id vehicula arcu. Mauris eu enim dui, sit  amet convallis lectus. Praesent id velit turpis, ac tempus eros. Etiam  ac enim nisl, at tempor ipsum. Nunc turpis leo, commodo eu sodales sit  amet, condimentum sed risus. Vestibulum ultricies neque at neque tempor  dapibus. In et lectus pharetra ante fermentum posuere nec non ligula.  Aenean lacus nunc, vulputate vehicula molestie eu, auctor ut dolor.</p>
-						</div>
-						
-													
-																					<p class="comments"><span><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/?h=t#comments-wrap">1 Comments</a> &darr;</span></p>
-							
-														
-												
-					</div>
-					
-					<!-- /.post -->
-					
-										
-				</div>
-			</div>
-			
-							<div id="comments-wrap" >
-	        			        	</div><!-- /#comments-wrap -->
+			<%- body %>
         				
 		</div><!-- /#main -->
 		
 		<div id="sidebar-right">
-			<div class="adspace-widget widget"><h3>Brought to you by:</h3>		
-			<a href="http://www.woothemes.com"><img src="http://woothemes.com/ads/200x125.jpg" alt="WooThemes" /></a>
+			<div class="adspace-widget widget"><h3>Sobre o autor:</h3>
+			<div align="justify">
+			Meu nome é Pedro Franceschi. Sou um desenvolvedor mobile e web. Trabalho com o iPhone, Android, Cocoa (para Mac), C e C++, jQuery e AJAX, Ruby, Ruby on Rails, Node.js e outros. Aqui você vai encontrar meus projetos, meu portfolio, minhas apresentações, códigos open-source e tudo o que eu faço.</div>
+			<!-- <a href="http://www.woothemes.com"><img src="http://woothemes.com/ads/200x125.jpg" alt="WooThemes" /></a> -->
 	
-		</div><div id="woo_flickr-2" class="widget widget_woo_flickr"><h3>		Photos on <span>flick<span>r</span></span>        </h3>            
-        <div class="wrap">
-            <div class="fix"></div>
-            <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=4&amp;display=latest&amp;&amp;layout=x&amp;source=user&amp;user=7451378@N04&amp;size=s"></script>        
-            <div class="fix"></div>
+		</div><div class="widget">
+			<h3>Na rede</h3>
+			<li><a href="http://www.twitter.com/pedroh96" target="_blank">Twitter</a></li>
+			<li><a href="http://www.facebook.com/profile.php?id=1077461045" target="_blank">Facebook</a></li>
+			<li><a href="https://github.com/pedrofranceschi" target="_blank">GitHub</a></li>
+			<li><a href="http://www.linkedin.com/profile/view?id=52346147" target="_blank">Linkedin</a></l>
+			<li><a href="mailto:pedrohfranceschi@gmail.com">E-Mail</a></li>
         </div>
 
 	   </div>	</div>
@@ -224,50 +99,17 @@
 		
 		<div id="footer">
 			
-							<div id="footer-widgets" class="col-full">
-				
-				    <div class="block">
-    			    	<div id="text-3" class="widget widget_text"><h3>Widgetized Regions</h3>			<div class="textwidget"><p>The "Chapters" theme comes with 4 footer widgetized regions that you can place specific widgets. It also has a left and right sidebar that you can populate.</p>
-<p>Thanks to the Woo Sidebar Manager you can place specific widgets on particular pages of your site. Nifty hey?</p>
-</div>
-		</div>    
-				    </div>
-				    <div class="block">
-    			    	<div id="recent-comments-3" class="widget widget_recent_comments"><h3>Recent Comments</h3><ul id="recentcomments"><li class="recentcomments">WooThemes on <a href="http://demo.woothemes.com/chapters/?p=135#comment-13">Sed facilisis mi sapien ac nisl</a></li><li class="recentcomments">WooThemes on <a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/#comment-12">An example of a post</a></li><li class="recentcomments">WooThemes on <a href="http://demo.woothemes.com/chapters/2010/09/08/whorestar/#comment-11">Whorestar</a></li><li class="recentcomments">WooThemes on <a href="http://demo.woothemes.com/chapters/2010/11/16/the-post-title/#comment-10">The post title</a></li><li class="recentcomments">WooThemes on <a href="http://demo.woothemes.com/chapters/2010/07/13/be-addicted/#comment-9">Be Addicted</a></li></ul></div>    
-				    </div>
-				    <div class="block">
-    			    	<div id="tag_cloud-3" class="widget widget_tag_cloud"><h3>Tag Cloud</h3><div><a href='http://demo.woothemes.com/chapters/tag/competition/' class='tag-link-7' title='1 topic' style='font-size: 8pt;'>competition</a>
-<a href='http://demo.woothemes.com/chapters/tag/inspirational/' class='tag-link-6' title='1 topic' style='font-size: 8pt;'>inspirational</a>
-<a href='http://demo.woothemes.com/chapters/tag/lorem/' class='tag-link-3' title='2 topics' style='font-size: 22pt;'>lorem</a>
-<a href='http://demo.woothemes.com/chapters/tag/post/' class='tag-link-4' title='1 topic' style='font-size: 8pt;'>post</a>
-<a href='http://demo.woothemes.com/chapters/tag/rockstar/' class='tag-link-8' title='2 topics' style='font-size: 22pt;'>rockstar</a>
-<a href='http://demo.woothemes.com/chapters/tag/team/' class='tag-link-9' title='1 topic' style='font-size: 8pt;'>team</a>
-<a href='http://demo.woothemes.com/chapters/tag/visionary/' class='tag-link-5' title='1 topic' style='font-size: 8pt;'>visionary</a></div>
-</div>    
-				    </div>
-				    <div class="block">
-    			    			<div id="recent-posts-3" class="widget widget_recent_entries">		<h3>Recent Posts</h3>		<ul>
-				<li><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/" title="An example of a post">An example of a post</a></li>
-				<li><a href="http://demo.woothemes.com/chapters/2010/11/16/the-post-title/" title="The post title">The post title</a></li>
-				<li><a href="http://demo.woothemes.com/chapters/2010/11/16/this-is-another-post/" title="This is another post">This is another post</a></li>
-				<li><a href="http://demo.woothemes.com/chapters/2010/09/08/whorestar/" title="Whorestar">Whorestar</a></li>
-				<li><a href="http://demo.woothemes.com/chapters/2010/08/30/become-a-visionary/" title="Become a Visionary">Become a Visionary</a></li>
-				</ul>
-		</div>    
-				    </div>
-				    <div class="fix"></div>
-				
-				</div><!-- /#footer-widgets  -->
+
     					
 			<div class="footer-inside">
 		
 				<div id="copyright" class="col-left">
 				
-											<p>&copy; 2011 Chapters. All Rights Reserved.</p>
+											<p>&copy; 2011 Pedro Franceschi. All Rights Reserved.</p>
 									</div>
 				
 				<div id="credit" class="col-right">
-        									<p>Powered by <a href="http://www.wordpress.org">WordPress</a>. Designed by <a href="http://www.woothemes.com"><img src="http://demo.woothemes.com/chapters/wp-content/themes/chapters/images/woothemes.png" width="74" height="19" alt="Woo Themes" /></a></p>
+        									<p>Powered by <a href="http://www.github.com/pedrofranceschi/blogode" target="_blank">Blogode</a>. Designed by <a href="http://www.woothemes.com"><img src="http://demo.woothemes.com/chapters/wp-content/themes/chapters/images/woothemes.png" width="74" height="19" alt="Woo Themes" /></a></p>
 									</div>
 			
 			</div><!-- /#footer-inside -->
