Improved the plugin loading logic.

--- a/public/templates/pedrofranceschi.com/layout.html
+++ b/public/templates/pedrofranceschi.com/layout.html
@@ -65,7 +65,7 @@
 </div>
 		</div>   
    		<div class="widget">
-	 		<%- plugins.twitter_search %>
+	 		<%- plugins.user_tweets %>
         </div>        
    		
 		</div>		
