--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,122 +1,79 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 <head profile="http://gmpg.org/xfn/11">
-
-<title><%= blogName %></title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="robots" content="index, follow" />
-
-<link rel="stylesheet" type="text/css" href="/stylesheet.css" media="screen" />
-<!-- <link rel="stylesheet" type="text/css" href="http://demo.woothemes.com/chapters/wp-content/themes/chapters/style.css" media="screen" /> -->
-<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
-<link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://demo.woothemes.com/chapters/feed/" />
-<!-- <link rel="pingback" href="http://demo.woothemes.com/chapters/xmlrpc.php" />
-      
-<script type='text/javascript' src='http://demo.woothemes.com/chapters/wp-includes/js/jquery/jquery.js?ver=1.4.2'></script>
-<script type='text/javascript' src='http://demo.woothemes.com/chapters/wp-content/themes/chapters/includes/js/jcarousel.js?ver=3.0.4'></script>
-<script type='text/javascript' src='http://demo.woothemes.com/chapters/wp-content/themes/chapters/includes/js/jquery.tipsy.js?ver=3.0.4'></script>
-<script type='text/javascript' src='http://demo.woothemes.com/chapters/wp-content/themes/chapters/includes/js/general.js?ver=3.0.4'></script>
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://demo.woothemes.com/chapters/xmlrpc.php?rsd" />
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://demo.woothemes.com/chapters/wp-includes/wlwmanifest.xml" /> 
-<link rel='index' title='Chapters' href='http://demo.woothemes.com/chapters/' />
-<meta name="generator" content="WordPress 3.0.4" />
-<link rel="stylesheet" href="http://demo.woothemes.com/chapters/wp-content/plugins/ajax-calendar/calendar.css" type="text/css" media="screen" title="no title" charset="utf-8"/>
-<script type="text/javascript" src="http://demo.woothemes.com/chapters/wp-content/plugins/ajax-calendar/js/microajax.js"></script> -->
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<title><%= blogName %></title>
+	<link rel="stylesheet" href="http://wpthemes.blogohblog.net/wp-content/themes/brilliance/style.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="http://wpthemes.blogohblog.net/wp-content/plugins/wp-page-numbers,_default,_wp-page-numbers.css+wp-pagenavi,_pagenavi-css.css.pagespeed.cc._s2mDWkUBV.css"/>
+	<script src="http://code.jquery.com/jquery-1.4.4.js"></script>
+	<link rel="alternate" type="application/rss+xml" title="<%= blogName %>'s RSS" href="/feed" />
 </head>
-
-<body class="home blog safari">
-
-	<div id="header">
-	
-		<div class="header-inside">
-	
-	    	<div id="logo">
-	    	   
-	    		    			    <a href="<%= blogAddress %>" title="<%= blogName %>">
-    			        <img src="http://demo.woothemes.com/chapters/wp-content/themes/chapters/images/logo.png" alt="Chapters" />
-    			    </a>
-    			 
-    			
-    			    			    <h1 class="site-title"><a href="http://demo.woothemes.com/chapters">Chapters</a></h1>
-    			    			    <span class="site-description">Just another WooThemes demo site</span>
-	    	  	
-	    	</div><!-- /#logo -->
-					
-		</div><!-- /.header-inside -->
-	    
-	    <div class="fix"></div>
-	    
-	</div><!-- /#header -->
-	
+<body>
 	<div id="wrapper">
-	<div id="wrapper-inner">
-	
-		<div id="sidebar-left">
-			<div id="pages-2" class="widget widget_pages"><h3>Páginas</h3>		<ul>
-				<% for(var i=0; i < pages.length; i++) { %>
-					<li class="page_item"><a href="/pages/<%= pages[i].link_name %>" title="<%= unescape(pages[i].title) %>"><%= unescape(pages[i].title) %></a></li>
-				<% } %>
-		</ul>
-		</div>		<div id="woo_search-3" class="widget widget_woo_search">                <div class="search_main">
-    <form method="get" class="searchform" action="/search" >
-        <input type="text" class="field s" name="keywords" value="Pesquisar..." onfocus="if (this.value == 'Pesquisar...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Pesquisar...';}" />
-    </form>    
-    <div class="fix"></div>
-</div>
-		</div>   
-   		<div class="widget">
-	 		<%- plugins.twitter_search %>
-        </div>        
-   		
-		</div>		
-		<div id="main">
-
-			<%- body %>
-        				
-		</div><!-- /#main -->
-		
-		<div id="sidebar-right">
-			<div class="adspace-widget widget"><h3>Sobre o autor:</h3>
-			<div align="justify">
-			Meu nome é Pedro Franceschi. Sou um desenvolvedor mobile e web. Trabalho com o iPhone, Android, Cocoa (para Mac), C e C++, jQuery e AJAX, Ruby, Ruby on Rails, Node.js e outros. Aqui você vai encontrar meus projetos, meu portfolio, minhas apresentações, códigos open-source e tudo o que eu faço.</div>
-			<!-- <a href="http://www.woothemes.com"><img src="http://woothemes.com/ads/200x125.jpg" alt="WooThemes" /></a> -->
-	
-		</div><div class="widget">
-			<h3>Na rede</h3>
-			<li><a href="http://www.twitter.com/pedroh96" target="_blank">Twitter</a></li>
-			<li><a href="http://www.facebook.com/profile.php?id=1077461045" target="_blank">Facebook</a></li>
-			<li><a href="https://github.com/pedrofranceschi" target="_blank">GitHub</a></li>
-			<li><a href="http://www.linkedin.com/profile/view?id=52346147" target="_blank">Linkedin</a></l>
-			<li><a href="mailto:pedrohfranceschi@gmail.com">E-Mail</a></li>
-        </div>
-
-	   </div>	</div>
-		
-		<div class="fix"></div>
-		
-		</div><!-- /#wrapper-inner -->
-		</div><!-- /#wrapper -->
-		
-		<div id="footer">
-			
-
-    					
-			<div class="footer-inside">
-		
-				<div id="copyright" class="col-left">
-				
-											<p>&copy; 2011 Pedro Franceschi. All Rights Reserved.</p>
-									</div>
-				
-				<div id="credit" class="col-right">
-        									<p>Powered by <a href="http://www.github.com/pedrofranceschi/blogode" target="_blank">Blogode</a>. Designed by <a href="http://www.woothemes.com"><img src="http://demo.woothemes.com/chapters/wp-content/themes/chapters/images/woothemes.png" width="74" height="19" alt="Woo Themes" /></a></p>
-									</div>
-			
-			</div><!-- /#footer-inside -->
-			
-			<div class="fix"></div>
-			
+		<div id="header">
+			<h1><a href="<%= blogAddress %>"><%= blogName %></a></h1>
+			<div id="topsearch"><form method="get" action="/search"><input type="text" value="" name="keywords"/><button type="submit">Search</button></form></div>
 		</div>
-
-</body>
-</html>
+		<div id="content">
+			<%- body %>
+											<div class="navigation">
+												<div class="alignleft"></div>
+												<div class="alignright"></div>
+											</div>
+										</div>
+										<div id="sidebar">
+										<!-- Begin Sidebar -->
+										<div>
+											<ul>
+												<li class="widget"><h2>About <%= blogName %></h2>
+													<ul>
+														<li class="non">
+															<p><%= blogDescription %></p>
+																</li>
+															</ul>
+														</li>
+														<li class="widget">
+															<h2>Pages</h2>
+															<% for(var i=0; i < pages.length; i++) { %>
+																<a href="/pages/<%= pages[i].link_name %>"><%= unescape(pages[i].title) %></a><br/>
+															<% } %>
+														</li>
+														<br/>
+														<li class="widget">
+															<%- plugins.twitter_search %>
+														</li>
+														<!-- <li class="widget"><h2>Categories</h2>
+															<ul id="categories">
+																<li class="cat-item cat-item-18"><a href="http://wpthemes.blogohblog.net/category/featured/" title="View all posts filed under Featured">Featured</a> (1)
+																</li>
+																<li class="cat-item cat-item-10"><a href="http://wpthemes.blogohblog.net/category/more-tag/" title="View all posts filed under More Tag">More Tag</a> (1)
+																</li>
+																<li class="cat-item cat-item-8"><a href="http://wpthemes.blogohblog.net/category/ordered-list/" title="View all posts filed under Ordered List">Ordered List</a> (1)
+																</li>
+																<li class="cat-item cat-item-3"><a href="http://wpthemes.blogohblog.net/category/test-category/" title="View all posts filed under Test Category">Test Category</a> (3)
+																</li>
+																<li class="cat-item cat-item-15"><a href="http://wpthemes.blogohblog.net/category/testing/" title="View all posts filed under Testing">Testing</a> (2)
+																</li>
+																<li class="cat-item cat-item-4"><a href="http://wpthemes.blogohblog.net/category/testing-theme/" title="View all posts filed under Testing Theme">Testing Theme</a> (5)
+																</li>
+															</ul>
+														</li> -->
+													</ul>
+												</div><!-- End Sidebar -->
+											</div>
+											<div id="main-ad">
+											<script type="text/javascript">
+											<!--
+											google_ad_client = "";
+											//120x600, created 11/28/07
+											google_ad_slot = "6283727582";
+											google_ad_width = 120;
+											google_ad_height = 600;
+											//--></script>
+											<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>	</div>
+										</div>
+										<div id="footer">
+											<%= blogName %> is proudly powered by Blogode | <a href="http://www.blogohblog.com/">Designed by Jai Nischal Verma</a>
+										</div>
+									</body>
+									</html>
