--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -12,10 +12,10 @@ Number.prototype.pad =
 		return s;
 	};
 
-	Date.prototype.months = [
-			'Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho',
-			'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'
-		];
+Date.prototype.months = [
+		'January', 'February', 'March', 'April', 'May', 'June', 'July',
+		'August', 'September', 'October', 'November', 'December'
+	];
 Date.prototype.weekdays = [
 		'Sunday', 'Monday', 'Tuesday', 'Wednesday',
 		'Thursday', 'Friday', 'Saturday'
@@ -109,29 +109,16 @@ Date.prototype.strftime =
 
 %>
 
-<div class="content-wrapper">
-	<div class="content">		        			
-
-		<div class="content-inner post">
-
-			<h2 class="title"><a href="/<%= page.id %>"><%= unescape(page.title) %></a></h2>
-
-			<p class="post-meta">
-				<span class="post-author"><span class="small">por</span> <%= unescape(page.user_name) %></span>
-				<span class="post-date"><span class="small">em</span> <%= unescape(page.created_at.strftime("%d de %B de %Y")) %></span>
-				<!-- <span class="post-category"><span class="small">in</span> <a href="http://demo.woothemes.com/chapters/category/uncategorized/" title="View all posts in Uncategorized" rel="category tag">Uncategorized</a></span> -->
-			</p>
-
-
-
-			<div class="entry">
-				<%- unescape(page.body) %>
-			</div>
-
-
-			<!-- <p class="comments"><span><a href="http://demo.woothemes.com/chapters/2010/11/16/an-example-of-a-post/?h=t#comments-wrap">1 Comments</a> &darr;</span></p> -->
-
-
-		</div>				
+<div class="post">
+	<h2><%= unescape(page.title) %></h2>
+	<div class="post-info">
+		by <%= unescape(page.user_name) %><br/><br/>
+		<p><%= unescape(page.created_at.strftime("%I:%M %p, %m/%d/%Y")) %></p>
+	</div>
+	<div class="post-entry">
+		<p><%- unescape(page.body) %></p>
 	</div>
 </div>
+	<!-- You can start editing here. -->
+	<hr/>
+	<hr/>
