--- a/views/admin/posts/edit.ejs
+++ b/views/admin/posts/edit.ejs
@@ -37,7 +37,10 @@
 	<textarea id="elm1" name="body" rows="15" cols="80" style="550px; height:300px;"><%= unescape(post.body) %></textarea>
 	
 	<input type="hidden" name="id" value="<%= post.id %>"/><br/>
-		
+	
+	<br/>
+	Tags (separated by comma): <input type="text" name="tags" size="62" value="<%= post.tags.join(', ') %>"/>
 	<br/><br/>
+
  	<input type="submit" id="submitButton" value="Submit" onClick="submitForm();"/>
 </form>
