--- a/views/admin/posts/new.ejs
+++ b/views/admin/posts/new.ejs
@@ -35,7 +35,10 @@
 	
 	<textarea id="elm1" name="body" rows="15" cols="80" style="550px; height:300px;">
 	</textarea>
-		
+	
+	<br/>
+	Tags (separated by comma): <input type="text" name="tags" size="62"/>
 	<br/><br/>
+	
  	<input type="submit" id="submitButton" value="Submit" onClick="submitForm();"/>
 </form>
