--- a/public/templates/pedrofranceschi.com/posts/index.html
+++ b/public/templates/pedrofranceschi.com/posts/index.html
@@ -159,7 +159,10 @@ Date.prototype.strftime =
 
 			<p class="post-meta">
 				<span class="post-author"><span class="small">por</span> <%= unescape(posts[i].user_name) %></span>
-				<span class="post-date"><span class="small">em</span> <%= unescape(posts[i].created_at.strftime("%d de %B de %Y")) %></span>
+				<span class="post-date"><span class="small">em</span> <%= unescape(posts[i].created_at.strftime("%d de %B de %Y")) %></span><br/>
+				<% if(posts[i].tags.length != 0) { %>
+					Tags: <%= posts[i].tags.join(', ') %>
+				<% } %>
 				<!-- <span class="post-category"><span class="small">in</span> <a href="http://demo.woothemes.com/chapters/category/uncategorized/" title="View all posts in Uncategorized" rel="category tag">Uncategorized</a></span> -->
 			</p>
 
